# Raffle

./: README.md
back/: Cargo.toml  config.json
back/src/: main.rs
front/: config-overrides.js  package.json  program-keypair.json  uninstall-all-globals.js
front/src/: App.js  PhantomWallet.js  index.js  styles.css
front_anchor/: config-overrides.js  package-lock.json  package.json
front_anchor/src/: App.js  PhantomWallet.js  idl.json  index.js  program_idl.json  styles.css
program/: Cargo.toml  accOne.json
program/src/: lib.rs
program_anchor/: Anchor.toml  deploy.js
program_anchor/programs/anchor/: Cargo.toml
program_anchor/programs/anchor/src/: lib.rs
