[package]
name = "rust_backend"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4.11"
rocket_cors = "0.5.2"
solana-client = "1.15.2"
solana-sdk = "1.15.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0"
solana-program = "1.15.2"
byteorder = "1.4.3"
arrayref = "0.3.7"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"
rocket_contrib = { version = "0.4.10", features = ["json"] }


